syntax = "proto3";
package com.odc.fileservice.v1;

option java_multiple_files = true;
option java_package = "com.odc.fileservice.v1";
option java_outer_classname = "FileServiceProto";

service FileService {
  rpc GetFileNamesByLinks(GetFileNamesByLinksRequest) returns (GetFileNamesByLinksResponse);
  rpc GetFilesByEntityId(GetFilesByEntityIdRequest) returns (GetFilesByEntityIdResponse);
}

message GetFileNamesByLinksRequest {
  repeated string file_links = 1;
}

message GetFileNamesByLinksResponse {
  map<string, string> file_link_to_name = 1;
}
message GetFilesByEntityIdRequest {
  string entity_id = 1;
}

message GetFilesByEntityIdResponse {
  repeated FileInfo files = 1;
}

message FileInfo {
  string id = 1;
  string file_name = 2;
  string file_url = 3;
  string s3_key = 4;
  string uploaded_at = 5;
  string entity_id = 6;
}